--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
-Changelog:
-----------
+Changelog for @PACKAGE@
+----------------------------------------------------------------------
 
 2008-02-12 v1.1.5
 
